public/css/style.css
/* ... */
@media(max-width: 400px) {
    
    body {
        width: 100%;
    }

    .header {
        margin-bottom: 8rem;
    }

    .logo img {
        width: 40%;
        position: absolute;
        left: 2rem;
        top: 1rem;
    }

    .btn-header {
        width: 35%;
        height: auto;
        top: 2rem;
        right: .5rem;
        padding: .5rem;
        text-align: center;
        font-size: 1.2rem;       
    }

    #humburger::before {
        top: -0.5rem;
    }
    
    #humburger {
        width: 2rem;
        height: .2rem;
        top: -0.1rem;
        margin-left: .5rem;
    }
    
    #humburger::after {
        top: 0.5rem;
    }

    .back-about {
        margin-bottom: 0;
    }

    .line {
        margin: 2rem auto;
    }

    .apresentation {
        width: auto;
        margin: .5rem;
    }

    .apresentation h1 {
        font-size: 2.5rem;
        padding: .5rem;
    }
    
    .apresentation p {
        width: auto;
        font-weight: normal;
        padding: .6rem;
    }

    .perception {
        width: 100%;
        padding: 0;
        margin-top: 2rem;
    }

    .info {
        width: 95%;

    }

    .perception h2 {
        font-size: 2rem;
        border-radius: 1rem 1rem 0 0;
        margin-bottom: 1rem;
    }

    .perception p {
        font-size: 1.5rem !important;
        text-align: center !important;
    }

    .collections {
        margin: auto;
        width: 95%;
        padding: 0;
    }

    .photos {
        margin: 0;
    }

    .photos picture {
        width: 100%;
        border: none;
        padding: 0;
        margin-bottom: 2rem;
    }

    .colletion-left span {
        width: 100% !important;
        font-size: 1.8rem;
        font-weight: normal;
        padding: 0 1rem;
    }

    .photos span {
        margin: auto !important;
    }   

    .colletion-left img {
        width: 20rem;        
    }

    .portfolio {
        margin-top: 14rem;
        margin-bottom: 15rem;
    }

    .portfolio::after {
        height: 10%;
        top: -15rem;
    }

    .portfolio::before {
        height: 4%;
        bottom: -6rem;
    }

    .group-card {
        padding-top: 1rem;
        padding-bottom: 0;
    }

    .cards {
        width: auto;
        height: auto;
    }

    .up-card {
        height: 12rem;
    }

    .up-card span {
        background-size: 150% 150%;
    }

    .down-card ol li, p {
        margin: .5rem 0 !important;
        font-weight: 700;
    }

    .down-card div a {
        width: 4rem;
        height: 2.5rem;
        padding: 0;
        display: flex;
        
    }

    .down-card div a img {
        width: 2rem;
        padding: 0;
    }

    .description-card {
        width: 75%;
    }

    .down-card div {
        align-items: flex-end;
    }

    .skills  {
        margin: 0;
        font-size: 2rem !important;
    }

    .skills::before {
        height: 7%;
        top: -12.8rem;
    }

    .skills h1 {
        margin: 1rem 0;
    }

    .setup-flex {
        width: auto;
        margin: 0 .8rem;
    }

    .setup span {
        font-size: 3rem;
        font-weight: 700;
    }

    .setup div {
        border-bottom: 3px solid #FFCD00;
        padding: 1rem;
        display: block;
    }

    .setup div img {
        width: 2.8rem;
        height: 2.8rem;
        margin-right: .5rem;
        margin-bottom: 0rem;
        float: left;
    }    

    .setup div p {
        padding: 0;
    }

    .cert ol li {
        justify-content: space-between;
    }
    

    .tools {
        border-bottom: none !important;
        margin-bottom: 1rem;
        display: flex !important;
        justify-content: space-between;
        width: 100%;
    }

    .modal {
        width: 94%;
        height: 60%;
    }
    .cert ol {
        width: 100%;
    }

    /* .modal {
        width: 90%;
        position: relative;
        top: -80px;
    } */

    .border-box {
        padding: 0;
        border: none;
        width: 100%;
    }

    .platforms {
        padding: 1rem 2rem;
    }

    .platforms ol li {
        font-size: 1rem;
        color: var(--bg-blue-dark);
    }

    .modal div h2 {
        font-size: 1.5rem;
    }

    .line-bottom, .line-white {
        margin-top: 1rem;
    }

    .footer {
        padding: 1rem !important;
        margin-top: 12rem;
    }

    form div {
        flex-direction: column;
    }

    form textarea {
        font-size: 1.5rem;
    }

    form div input {
        width: 100%;
        height: 4rem;
        border-radius: .5rem;
        
    }

    .shadow {
        border-radius: 1rem;
    }

    form div button {
        width: 100%;
        border-radius: 1rem;
        margin-left: 0;
        margin-top: 1rem;
        font-weight: 700;
        font-size: 2rem;
        padding: auto;
    }

    .social-media {
        display: flex;
        justify-content: space-around;
        align-items: center;
    }

    .social-media li {
        margin: 0;
        width: 3rem;
        height: 3rem;
    }
    
}

